--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-07 22:46+0200\n"
+"PO-Revision-Date: 2010-08-07 22:47+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -778,7 +778,7 @@ msgstr "Veritabanı Günlüğü"
 
 #: export.php:61
 msgid "Selected export type has to be saved in file!"
-msgstr "Seçili dışarı aktarma türü dosyaya kaydedilmelidir!"
+msgstr "Seçili dışa aktarma türü dosyaya kaydedilmelidir!"
 
 #: export.php:152 export.php:177 export.php:615
 #, php-format
