Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-07 22:47+0200\n"
+"PO-Revision-Date: 2010-08-07 22:48+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3069,7 +3069,7 @@ msgstr "XML"
 
 #: libraries/export/xml.php:28
 msgid "Export Structure Schemas (recommended)"
-msgstr "Yapı Şemalarını dışarı aktar (önerilir)"
+msgstr "Yapı Şemalarını dışa aktar (önerilir)"
 
 #: libraries/export/xml.php:30
 msgid "Export functions"
