--- a/po/tr.po
+++ b/po/tr.po
@@ -3073,7 +3073,7 @@ msgstr "Yapı Şemalarını dışa aktar (önerilir)"
 
 #: libraries/export/xml.php:30
 msgid "Export functions"
-msgstr "İşlevleri dışarı aktar"
+msgstr "İşlevleri dışa aktar"
 
 #: libraries/export/xml.php:32
 msgid "Export procedures"
