Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-07 22:49+0200\n"
+"PO-Revision-Date: 2010-08-07 22:50+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -6613,7 +6613,7 @@ msgstr "Düzenleme modu"
 
 #: setup/lib/messages.inc.php:101
 msgid "Customize default export options"
-msgstr "Varsayılan dışarı aktarma seçeneklerini özelleştirir"
+msgstr "Varsayılan dışa aktarma seçeneklerini özelleştirir"
 
 #: setup/lib/messages.inc.php:102
 msgid "Export defaults"
