--- a/po/tr.po
+++ b/po/tr.po
@@ -6737,7 +6737,7 @@ msgstr "Özelleştirme"
 
 #: setup/lib/messages.inc.php:133
 msgid "Customize export options"
-msgstr "Dışarı aktarma seçeneklerini özelleştir"
+msgstr "Dışa aktarma seçeneklerini özelleştir"
 
 #: setup/lib/messages.inc.php:135
 msgid "Customize import defaults"
