--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-07 22:50+0200\n"
+"PO-Revision-Date: 2010-08-07 22:51+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -8369,7 +8369,7 @@ msgstr "Eğer ihtiyacınız yoksa bu iki satırı yorum dışı bırakın."
 #: tbl_tracking.php:225
 msgid "SQL statements exported. Please copy the dump or execute it."
 msgstr ""
-"SQL ifadeleri dışarı aktarıldı. Lütfen yığını kopyalayın ya da çalıştırın."
+"SQL ifadeleri dışa aktarıldı. Lütfen yığını kopyalayın ya da çalıştırın."
 
 #: tbl_tracking.php:245 tbl_tracking.php:373
 msgid "Close"
