Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -1583,7 +1583,7 @@ msgstr "PBMS bağlantısı başarısız:"
 
 #: libraries/blobstreaming.lib.php:343
 msgid "PBMS get BLOB info failed:"
-msgstr ""
+msgstr "PBMS, BLOB bilgisi alması başarısız:"
 
 #: libraries/blobstreaming.lib.php:351
 msgid "get BLOB Content-Type failed"
