--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-09 22:21+0200\n"
+"PO-Revision-Date: 2010-08-09 22:22+0200\n"
 "Last-Translator: Robert Readman <robert_readman@hotmail.com>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -1584,7 +1584,7 @@ msgstr "PBMS get BLOB info failed:"
 
 #: libraries/blobstreaming.lib.php:351
 msgid "get BLOB Content-Type failed"
-msgstr ""
+msgstr "get BLOB Content-Type failed"
 
 #: libraries/blobstreaming.lib.php:377
 msgid "View image"
