--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1605,7 +1605,7 @@ msgstr "Download file"
 #: libraries/blobstreaming.lib.php:451
 #, php-format
 msgid "Could not open file: %s"
-msgstr ""
+msgstr "Could not open file: %s"
 
 #: libraries/common.inc.php:567
 msgid ""
