--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,15 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-06-04 14:09+0200\n"
+"PO-Revision-Date: 2010-08-10 07:40+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh_CN\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Pootle 2.0.1\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: browse_foreigners.php:36 browse_foreigners.php:57
 #: libraries/display_tbl.lib.php:415 server_privileges.php:1510
@@ -249,10 +249,9 @@ msgid "and then"
 msgstr "然后"
 
 #: db_operations.php:379
-#, fuzzy
 #| msgid "Rename database to"
 msgid "Remove database"
-msgstr "将数据库改名为"
+msgstr "删除数据库"
 
 #: db_operations.php:391
 #, php-format
@@ -8189,182 +8188,3 @@ msgstr "视图名"
 #: view_operations.php:91
 msgid "Rename view to"
 msgstr "将视图改名为"
-
-#, fuzzy
-#~| msgid "Table name"
-#~ msgid "Table removal"
-#~ msgstr "数据表名"
-
-#~ msgid "BLOB Repository"
-#~ msgstr "BLOB 容器"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Enabled"
-#~ msgstr "已启用"
-
-#~ msgid "Disable"
-#~ msgstr "禁用"
-
-#~ msgid "Damaged"
-#~ msgstr "已损坏"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Repair"
-#~ msgstr "修复"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Disabled"
-#~ msgstr "已禁用"
-
-#~ msgid "Enable"
-#~ msgstr "启用"
-
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "extension. Please check your PHP configuration."
-#~ msgstr ""
-#~ "无法加载 [a@http://php.net/%1$s@Documentation][em]%1$s (外链，英语)[/em][/"
-#~ "a] 扩展，请检查您的 PHP 配置。"
-
-#~ msgid ""
-#~ "Couldn't load the iconv or recode extension needed for charset "
-#~ "conversion. Either configure PHP to enable these extensions or disable "
-#~ "charset conversion in phpMyAdmin."
-#~ msgstr ""
-#~ "无法加载 iconv 或可用于转换字符集所需的重编码扩展，请配置 PHP 启用这些扩展"
-#~ "或在 phpMyAdmin 中禁用字符集转换功能。"
-
-#~ msgid ""
-#~ "Couldn't use the iconv, libiconv, or recode_string functions, although "
-#~ "the necessary extensions appear to be loaded. Check your PHP "
-#~ "configuration."
-#~ msgstr ""
-#~ "虽然必须的扩展已经加载，但还是无法使用 iconv、libiconv 和 recode_string 函"
-#~ "数。请检查您的 PHP 配置。"
-
-#~ msgid "Allow character set conversion"
-#~ msgstr "允许转换字符集"
-
-#~ msgid "Default character set used for conversions"
-#~ msgstr "转换时的默认字符集"
-
-#~ msgid "Default character set"
-#~ msgstr "默认字符集"
-
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "添加字段"
-
-#~ msgid "Field"
-#~ msgstr "字段"
-
-#~ msgid "Records"
-#~ msgstr "记录数"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "字段分隔符"
-
-#~ msgid "Fields"
-#~ msgstr "字段数"
-
-#~ msgid "Add %s field(s)"
-#~ msgstr "添加 %s 个字段"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "已删除字段 %s "
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "参见 image/jpeg: inline"
-
-#~ msgid "zipped"
-#~ msgstr "zip 压缩"
-
-#~ msgid "gzipped"
-#~ msgstr "gzip 压缩"
-
-#~ msgid "bzipped"
-#~ msgstr "bzip 压缩"
-
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr ""
-#~ "在文件头添加自定义注释 (\n"
-#~ " 为换行)"
-
-#~ msgid "and"
-#~ msgstr "和"
-
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "已禁用"
-
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "已启用"
-
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "修复"
-
-#~ msgid "Calendar"
-#~ msgstr "日历"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "兼容 MySQL&nbsp;4.0"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "无法加载默认配置: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "在第 %s 个字段创建索引"
-
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "新建数据表"
-
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "无"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "强制更新表 (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "无效的服务器索引：“%s”"
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "说明"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "无"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "数据库“%s”的大纲 - 第 %s 页"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "表“%s”不存在！"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "此 MySQL 服务器运行于 %s <b>复制</b> 进程。要获得更多关于此服务器的复制状"
-#~ "态，请浏览 <a href=\"#replication\">复制状态信息</a>."
-
-#~ msgid "running on %s"
-#~ msgstr "运行于 %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "比例因子太小，无法在一页中显示大纲"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "无法在发生错误时创建会话，请检查 PHP 或网站服务器日志，并正确配置 PHP 安"
-#~ "装。"
