Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 07:40+0200\n"
+"PO-Revision-Date: 2010-08-10 07:45+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -320,7 +320,7 @@ msgstr "整理"
 msgid ""
 "The phpMyAdmin configuration storage has been deactivated. To find out why "
 "click %shere%s."
-msgstr "链接表的附加功能尚未激活。要查出原因，请点击%s此处%s。"
+msgstr "phpMyAdmin 高级功能尚未激活。要查出原因，请点击%s此处%s。"
 
 #: db_operations.php:531
 msgid "Edit PDF Pages"
