--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 07:56+0200\n"
+"PO-Revision-Date: 2010-08-10 07:57+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -6468,7 +6468,7 @@ msgid ""
 "in documentation"
 msgstr ""
 "配置 phpMyAdmin 数据库获得更多功能，参见文档[a@../Documentation.html#linked-"
-"tables]链接表的附加功能[/a]。"
+"tables]phpMyAdmin 高级功能[/a]"
 
 #: setup/lib/messages.inc.php:129 setup/lib/messages.inc.php:290
 msgid "PMA database"
