--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7796,10 +7796,9 @@ msgid "Flush the table (FLUSH)"
 msgstr "刷新表 (FLUSH)"
 
 #: tbl_operations.php:642
-#, fuzzy
 #| msgid "Delete tracking data for this table"
 msgid "Delete data or table"
-msgstr "删除追踪数据"
+msgstr "删除数据或数据表"
 
 #: tbl_operations.php:657
 msgid "Empty the table (TRUNCATE)"
