--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 08:02+0200\n"
+"PO-Revision-Date: 2010-08-10 08:03+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -7966,10 +7966,9 @@ msgid "Propose table structure"
 msgstr "规划表结构"
 
 #: tbl_structure.php:537
-#, fuzzy
 #| msgid "Add column(s)"
 msgid "Add column"
-msgstr "增加字段"
+msgstr "添加字段"
 
 #: tbl_structure.php:551
 msgid "At End of Table"
