Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1558,7 +1558,7 @@ msgstr "PBMS 连接失败："
 
 #: libraries/blobstreaming.lib.php:343
 msgid "PBMS get BLOB info failed:"
-msgstr ""
+msgstr "PBMS 获取 BLOB 信息失败："
 
 #: libraries/blobstreaming.lib.php:351
 msgid "get BLOB Content-Type failed"
