--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1814,7 +1814,7 @@ msgstr "操作"
 #: libraries/core.lib.php:265 libraries/dbg/setup.php:21
 #, php-format
 msgid "The %s extension is missing. Please check your PHP configuration."
-msgstr ""
+msgstr "缺少 %s 扩展。请检查 PHP 配置。"
 
 #: libraries/db_events.inc.php:19 libraries/db_events.inc.php:21
 #: libraries/export/sql.php:412
