--- a/po/sl.po
+++ b/po/sl.po
@@ -4,16 +4,16 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-07-16 17:14+0200\n"
+"PO-Revision-Date: 2010-08-10 09:43+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
+"Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sl\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
-"%100==4 ? 2 : 3);\n"
-"X-Generator: Pootle 2.0.1\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || "
+"n%100==4 ? 2 : 3);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: browse_foreigners.php:36 browse_foreigners.php:57
 #: libraries/display_tbl.lib.php:415 server_privileges.php:1510
@@ -92,7 +92,7 @@ msgstr "Uporabi to vrednost"
 #: bs_disp_as_mime_type.php:29 bs_play_media.php:35
 #: libraries/blobstreaming.lib.php:362
 msgid "No blob streaming server configured!"
-msgstr ""
+msgstr "Strežnik za pretakanje blob ni konfiguriran!"
 
 #: bs_disp_as_mime_type.php:35
 #, fuzzy
@@ -8502,66 +8502,3 @@ msgstr "Ime VIEW"
 #: view_operations.php:91
 msgid "Rename view to"
 msgstr "Preimenuj pogled v"
-
-#, fuzzy
-#~| msgid "Table name"
-#~ msgid "Table removal"
-#~ msgstr "Ime tabele"
-
-#~ msgid "BLOB Repository"
-#~ msgstr "Shramba BLOB"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Enabled"
-#~ msgstr "Omogočeno"
-
-#~ msgid "Disable"
-#~ msgstr "Onemogoči"
-
-#~ msgid "Damaged"
-#~ msgstr "Poškodovano"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Repair"
-#~ msgstr "Popravi"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Disabled"
-#~ msgstr "Onemogočeno"
-
-#~ msgid "Enable"
-#~ msgstr "Omogoči"
-
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "extension. Please check your PHP configuration."
-#~ msgstr ""
-#~ "Ne morem naložiti podaljška [a@http://php.net/%1$s@Documentation][em]%1$s"
-#~ "[/em][/a]. Prosim, preverite konfiguracijo PHP."
-
-#~ msgid ""
-#~ "Couldn't load the iconv or recode extension needed for charset "
-#~ "conversion. Either configure PHP to enable these extensions or disable "
-#~ "charset conversion in phpMyAdmin."
-#~ msgstr ""
-#~ "Ni mogoče naložiti razširitev iconv ali recode, ki so potrebne za "
-#~ "pretvorbe kodnih tabel. Konfigurirajte PHP tako, da bo omogočal uporabo "
-#~ "teh razširitev, ali onemogočite pretvarjanje kodnih tabel v phpMyAdmin."
-
-#~ msgid ""
-#~ "Couldn't use the iconv, libiconv, or recode_string functions, although "
-#~ "the necessary extensions appear to be loaded. Check your PHP "
-#~ "configuration."
-#~ msgstr ""
-#~ "Ni mogoče uporabljati funkcij iconv, libiconv ali recode_string, čeprav "
-#~ "so potrebne razširitve normalno naložene. Preverite vašo konfiguracijo "
-#~ "PHP."
-
-#~ msgid "Allow character set conversion"
-#~ msgstr "Omogoči pretvarjanje nabora znakov"
-
-#~ msgid "Default character set used for conversions"
-#~ msgstr "Privzet nabor znakov uporabljen za pretvorbe"
-
-#~ msgid "Default character set"
-#~ msgstr "Privzet nabor znakov"
