--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 09:43+0200\n"
+"PO-Revision-Date: 2010-08-10 09:44+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -95,10 +95,9 @@ msgid "No blob streaming server configured!"
 msgstr "Strežnik za pretakanje blob ni konfiguriran!"
 
 #: bs_disp_as_mime_type.php:35
-#, fuzzy
 #| msgid "Failed to write file to disk."
 msgid "Failed to fetch headers"
-msgstr "Pisanje datoteke na disk je spodletelo."
+msgstr "Pridobivanje glav je spodletelo."
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
