--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 09:44+0200\n"
+"PO-Revision-Date: 2010-08-10 09:45+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -259,10 +259,9 @@ msgid "Database %s has been dropped."
 msgstr "Podatkovna zbirka %s je zavržena."
 
 #: db_operations.php:396
-#, fuzzy
 #| msgid "Go to database"
 msgid "Drop the database (DROP)"
-msgstr "Pojdi v zbirko podatkov"
+msgstr "Zavrzi zbirko podatkov (DROP)"
 
 #: db_operations.php:424
 msgid "Copy database to"
