--- a/po/sl.po
+++ b/po/sl.po
@@ -1857,7 +1857,7 @@ msgstr "Operacije"
 #: libraries/core.lib.php:265 libraries/dbg/setup.php:21
 #, php-format
 msgid "The %s extension is missing. Please check your PHP configuration."
-msgstr ""
+msgstr "Razširitev %s manjka. Prosimo, preverite vašo konfiguracijo PHP."
 
 #: libraries/db_events.inc.php:19 libraries/db_events.inc.php:21
 #: libraries/export/sql.php:412
