--- a/po/sl.po
+++ b/po/sl.po
@@ -2548,14 +2548,11 @@ msgid "Garbage Threshold"
 msgstr "Omejitev smeti"
 
 #: libraries/engines/pbms.lib.php:32
-#, fuzzy
 #| msgid ""
 #| "The percentage of garbage in a data log file before it is compacted. This "
 #| "is a value between 1 and 99. The default is 50."
 msgid "The percentage of garbage in a repository file before it is compacted."
-msgstr ""
-"Odstotek smeti v dnevniški datoteki, preden je ta stisnjena. Vrednost je med "
-"1 in 99. Privzeto je 50."
+msgstr "Odstotek smeti v hrambeni datoteki, preden je ta stisnjena."
 
 #: libraries/engines/pbms.lib.php:36 libraries/replication_gui.lib.php:69
 #: server_synchronize.php:1161
