--- a/po/sl.po
+++ b/po/sl.po
@@ -2545,7 +2545,7 @@ msgstr ""
 #: libraries/engines/pbms.lib.php:31
 #| msgid "Garbage threshold"
 msgid "Garbage Threshold"
-msgstr "Omejitev smeti"
+msgstr "Prag smeti"
 
 #: libraries/engines/pbms.lib.php:32
 #| msgid ""
