Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 09:53+0200\n"
+"PO-Revision-Date: 2010-08-10 09:56+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2618,6 +2618,8 @@ msgid ""
 "A \":\" delimited list of metadata headers to be used to initialize the "
 "pbms_metadata_header table when a database is created."
 msgstr ""
+"Seznam glav metapodatkov, ločenih z »:«, ki bo uporabljen za pripravo tabele "
+"pbms_metadata_header, ko je ustvarjena zbirka podatkov."
 
 #: libraries/engines/pbxt.lib.php:22
 msgid "Index cache size"
