--- a/po/sl.po
+++ b/po/sl.po
@@ -2853,10 +2853,9 @@ msgid "Table structure for table"
 msgstr "Struktura tabele"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Vsebina tabele __TABLE__"
+msgstr "Vsebina tabele @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
