--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 09:56+0200\n"
+"PO-Revision-Date: 2010-08-10 09:57+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6695,7 +6695,6 @@ msgid "Signon login options"
 msgstr "Prijavne možnosti signon"
 
 #: setup/lib/messages.inc.php:128
-#, fuzzy
 #| msgid ""
 #| "Configure phpMyAdmin database to gain access to additional features, see "
 #| "[a@../Documentation.html#linked-tables]linked-tables infrastructure[/a] "
@@ -6706,8 +6705,8 @@ msgid ""
 "in documentation"
 msgstr ""
 "Konfigurira zbirko podatkov phpMyAdmin za pridobitev dostopa do dodatnih "
-"funkcij, glej [a@../Documentation.html#linked-tables]infrastrukturo "
-"povezanih tabel[/a] v dokumentaciji"
+"funkcij, glej [a@../Documentation.html#linked-tables]hrambo konfiguracije "
+"phpMyAdmin[/a] v dokumentaciji"
 
 #: setup/lib/messages.inc.php:129 setup/lib/messages.inc.php:290
 msgid "PMA database"
