--- a/po/sl.po
+++ b/po/sl.po
@@ -8115,10 +8115,9 @@ msgid "Empty the table (TRUNCATE)"
 msgstr "Izprazni tabelo (TRUNCATE)"
 
 #: tbl_operations.php:675
-#, fuzzy
 #| msgid "Go to database"
 msgid "Delete the table (DROP)"
-msgstr "Pojdi v zbirko podatkov"
+msgstr "Izbriši tabelo (DROP)"
 
 #: tbl_operations.php:696
 msgid "Partition maintenance"
