Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 09:58+0200\n"
+"PO-Revision-Date: 2010-08-10 10:01+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2564,6 +2564,8 @@ msgid ""
 "The port for the PBMS stream-based communications. Setting this value to 0 "
 "will disable HTTP communication with the daemon."
 msgstr ""
+"Vrata za pretočna sporazumevanja s PBMS. Nastavitev te vrednosti na 0 bo "
+"onemogočilo sporazumevanje HTTP s procesom."
 
 #: libraries/engines/pbms.lib.php:41
 msgid "Repository Threshold"
