--- a/po/sl.po
+++ b/po/sl.po
@@ -2705,7 +2705,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:52
 msgid "Data log threshold"
-msgstr "Omejitev podatkovnega dnevnika"
+msgstr "Prag podatkovnega dnevnika"
 
 #: libraries/engines/pbxt.lib.php:53
 msgid ""
