--- a/po/sl.po
+++ b/po/sl.po
@@ -2721,7 +2721,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:57
 msgid "Garbage threshold"
-msgstr "Omejitev smeti"
+msgstr "Prag smeti"
 
 #: libraries/engines/pbxt.lib.php:58
 msgid ""
