Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -2590,6 +2590,9 @@ msgid ""
 "The timeout, in seconds, for temporary BLOBs. Uploaded BLOB data is removed "
 "after this time, unless they are referenced by a record in the database."
 msgstr ""
+"Časovna omejitev, v sekundah, za začasne BLOB-e. Naloženi podatki BLOB so "
+"odstranjeni po tem času, razen če se na njih sklicuje zapis v zbirki "
+"podatkov."
 
 #: libraries/engines/pbms.lib.php:51
 #, fuzzy
