Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 10:05+0200\n"
+"PO-Revision-Date: 2010-08-10 10:06+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2605,6 +2605,9 @@ msgid ""
 "indicate the unit of the value. A value in bytes is assumed when no unit is "
 "specified."
 msgstr ""
+"Največja velikost dnevniške datoteke začasnega BLOB. Lahko uporabite Kb, MB "
+"ali GB za določitev enote vrednosti. Ko enota ni navedena, se predpostavi "
+"vrednost v bajtih."
 
 #: libraries/engines/pbms.lib.php:56
 msgid "Max Keep Alive"
