Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 10:07+0200\n"
+"PO-Revision-Date: 2010-08-10 10:08+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2618,6 +2618,9 @@ msgid ""
 "The timeout for inactive connection with the keep-alive flag set. After this "
 "time the connection will be closed. The time-out is in milliseconds (1/1000)."
 msgstr ""
+"Časovna omejitev za nedejavne povezave z določeno zastavico keep-alive. Po "
+"tem času bo povezava prekinjena. Časovna omejitev je v milisekundah "
+"(1/1000)."
 
 #: libraries/engines/pbms.lib.php:61
 msgid "Metadata Headers"
