--- a/po/sl.po
+++ b/po/sl.po
@@ -101,7 +101,7 @@ msgstr "Pridobivanje glav je spodletelo"
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
-msgstr "Oddaljenega URL ni bilo mogoče doseči."
+msgstr "Oddaljenega URL ni bilo mogoče doseči"
 
 #: db_create.php:44
 #, php-format
