Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 10:09+0200\n"
+"PO-Revision-Date: 2010-08-10 10:10+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -4926,8 +4926,8 @@ msgstr "Dodaj privilegije na naslednji podatkovni zbirki"
 #: server_privileges.php:1939
 msgid "Wildcards % and _ should be escaped with a \\ to use them literally"
 msgstr ""
-"Pred nadomestna znaka % in _ je potrebno postaviti \\, če ju želite "
-"uporabiti dobesedno."
+"Pred nadomestna znaka % in _ je potrebno postaviti \\, če ju želite uporabiti "
+"dobesedno"
 
 #: server_privileges.php:1942
 msgid "Add privileges on the following table"
