--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 10:10+0200\n"
+"PO-Revision-Date: 2010-08-10 10:11+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7624,7 +7624,7 @@ msgid ""
 "compatibility checks and thereby increases performance"
 msgstr ""
 "Onemogočite, če veste, da so vaše tabele pma_* ažurirane. To prepreči "
-"preverjanja združljivosti in tako poveča zmogljivost."
+"preverjanja združljivosti in tako poveča zmogljivost"
 
 #: setup/lib/messages.inc.php:322
 msgid "Verbose check"
