--- a/po/sl.po
+++ b/po/sl.po
@@ -4896,7 +4896,7 @@ msgstr "Odvzemi uporabnikom aktivne privilegije in jih potem izbriši."
 #: server_privileges.php:1614 server_privileges.php:1615
 #: server_privileges.php:1616
 msgid "Drop the databases that have the same names as the users."
-msgstr "Izbriši podatkovne zbirke, ki imajo enako ime kot uporabniki."
+msgstr "Izbriši zbirke podatkov, ki imajo enako ime kot uporabniki."
 
 #: server_privileges.php:1632
 #, php-format
