--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-31 14:12-0400\n"
-"PO-Revision-Date: 2010-08-10 10:15+0200\n"
+"PO-Revision-Date: 2010-08-10 10:16+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6427,7 +6427,7 @@ msgstr "Potrjevanje poizvedb DROP"
 
 #: setup/lib/messages.inc.php:49
 msgid "Tab that is displayed when entering a database"
-msgstr "Zavihek, ki se prikaže ob odprtju podatkovne zbirke"
+msgstr "Zavihek, ki se prikaže ob odprtju zbirke podatkov"
 
 #: setup/lib/messages.inc.php:50
 msgid "Default database tab"
